# hugo-phone

./: README.md
bridge/: Cargo.toml  config.toml  hugo-bridge.service
bridge/src/: ami.rs  config.rs  keyboard.rs  main.rs  watcher.rs
config/: dosbox-hugo.conf
config/asterisk/: extensions.conf  manager.conf  pjsip.conf  sip.conf
config/dosbox/: dosbox-hugo.conf
docs/manual/: README.md  cap02-arquitectura.tex  cap03-bom.tex  cap04-fase1.tex  cap05-fase2.tex  cap06-fase3.tex  cap07-fase4.tex  cap09-fase6.tex  cap10-referencia.tex  main.tex
docs/manual-en/: README.md  cap01-introduccion.tex  cap02-arquitectura.tex  cap03-bom.tex  cap04-fase1.tex  cap05-fase2.tex  cap06-fase3.tex  cap07-fase4.tex  cap08-fase5.tex  cap09-fase6.tex  cap10-referencia.tex  main.aux  main.out  main.tex  main.toc
docs/manual-es/: build.sh  cap01-introduccion.tex  cap02-arquitectura.tex  cap04-fase1.tex  cap05-fase2.tex  cap06-fase3.tex  cap07-fase4.tex  cap08-fase5.tex  cap09-fase6.tex  cap10-referencia.tex  main.aux  main.out  main.tex  main.toc
scripts/: download-hugo.sh  install-all.sh  start_hugo.sh
