[package]
name = "hugo-bridge"
version = "0.1.0"
edition = "2021"
description = "DTMF → keyboard bridge for Hugo Phone"
license = "MIT"

[[bin]]
name = "hugo-bridge"
path = "src/main.rs"

[dependencies]
# Async runtime — solo features que usamos
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal", "fs", "sync"] }
# Cliente AMI: implementación propia, sin crates extra
# Teclado virtual vía uinput (Linux only)
uinput = "0.1"
# Config + serde
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# Logging estructurado
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI args
clap = { version = "4.5", features = ["derive"] }
# File watching para hot-reload
notify = "6.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
